<resources>
    <string name="app_name">AndroidJwtRestApiExample</string>

    <string name="title_activity_login">LogIn</string>
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sing In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Hola !"</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">Password >5 caracteres</string>
    <string name="login_failed">"Fallo de LogIn"</string>

    <string name="title_activity_main">RestJWTexample</string>
    <string name="label_username">User Name</string>
    <string name="label_jwt">Token JWT</string>
    <string name="label_response">Response here...</string>

    <string name="param_text">param...</string>

    <string name="button_saludar">Hello server!</string>


</resources>